--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. In fuga magni doloribus sapiente reiciendis consequatur porro nam sunt fugit velit veritatis, minus odit deleniti dolore distinctio voluptatibus ipsum libero inventore.</h2>
   <h3><a class="a" target="_blank" href="https://www.geeksforgeeks.org/top-10-projects-for-beginners-to-practice-html-and-css-skills/">Site that I used to figure out what projects should I make</h3>
   <a download href="Python photos/code.png"><img class="photo" src="Python photos/code.png" alt="A picture of html + css code"></a>
-  <h2><a class="a" target="_blank" href="https://github.com/Jadiefication/Idk/blob/main/Basic%20graphics.py">My github</a></h2>
+  <h2><a class="a" target="_blank" href="https://github.com/Jadiefication/Idk/blob/main">My github</a></h2>
   <style>
     .a{
       color: black;
