--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
   <h2><a class="a" target="_blank" href="https://github.com/Jadiefication/Idk/blob/main">My github</a></h2>
   <style>
     .a{
-      color: black;
+      color: white;
       font-style: italic;
     }
     .photo{
       height: 800px;
       width: 2800px;
       object-fit: contain;
+    }
+    body{
+      color: black;
     }
   </style>
 </body>
