--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
       width: 2800px;
       object-fit: contain;
     }
-    body{
-      color: black;
-    }
   </style>
 </body>
+<style>
+  body{
+    color: black;
+  }
+</style>
 </html>
