--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="...">
   <title>Document</title>
 </head>
-<body>
+<body class="l">
   <h1>The begining of my journey</h1>
   <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. In fuga magni doloribus sapiente reiciendis consequatur porro nam sunt fugit velit veritatis, minus odit deleniti dolore distinctio voluptatibus ipsum libero inventore.</h2>
   <h3><a class="a" target="_blank" href="https://www.geeksforgeeks.org/top-10-projects-for-beginners-to-practice-html-and-css-skills/">Site that I used to figure out what projects should I make</h3>
@@ -23,11 +23,9 @@
       width: 2800px;
       object-fit: contain;
     }
+    .l{
+      color: black;
+    }
   </style>
 </body>
-<style>
-  body{
-    color: black;
-  }
-</style>
 </html>
